// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on desktop with draft 1`] = `
<Link
  aria-label="test-channel-name unread"
  className="test-class"
  id="sidebarItem_test-channel-name"
  onClick={[Function]}
  to="test-link"
>
  <SidebarChannelButtonOrLinkIcon
    channelIsArchived={false}
    channelStatus="test"
    channelType="D"
    hasDraft={true}
    membersCount={3}
    teammateDeletedAt={1}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    <span>
      test-channel-name
    </span>
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    badge={false}
    channelId="test-channel-id"
    channelType="D"
    handleClose={[MockFunction]}
    teammateId="test-teammate-id"
  />
</Link>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on desktop with mentions badge 1`] = `
<Link
  aria-label="test-channel-name 6 mentions"
  className="test-class"
  id="sidebarItem_test-channel-name"
  onClick={[Function]}
  to="test-link"
>
  <SidebarChannelButtonOrLinkIcon
    channelIsArchived={false}
    channelStatus="test"
    channelType="D"
    hasDraft={false}
    membersCount={3}
    teammateDeletedAt={1}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    <span>
      test-channel-name
    </span>
  </span>
  <span
    className="badge"
    id="unreadMentions"
  >
    6
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    badge={true}
    channelId="test-channel-id"
    channelType="D"
    handleClose={[MockFunction]}
    teammateId="test-teammate-id"
  />
</Link>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on desktop without badge 1`] = `
<Link
  aria-label="test-channel-name 6 mentions"
  className="test-class"
  id="sidebarItem_test-channel-name"
  onClick={[Function]}
  to="test-link"
>
  <SidebarChannelButtonOrLinkIcon
    channelIsArchived={false}
    channelStatus="test"
    channelType="D"
    hasDraft={false}
    membersCount={3}
    teammateDeletedAt={1}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    <span>
      test-channel-name
    </span>
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    channelId="test-channel-id"
    channelType="D"
    handleClose={[MockFunction]}
    teammateId="test-teammate-id"
  />
</Link>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on non-desktop with mentions badge 1`] = `
<Link
  aria-label="test-channel-name 6 mentions"
  className="test-class"
  id="sidebarItem_test-channel-name"
  onClick={[Function]}
  to="test-link"
>
  <SidebarChannelButtonOrLinkIcon
    channelIsArchived={false}
    channelStatus="test"
    channelType="D"
    hasDraft={false}
    membersCount={3}
    teammateDeletedAt={1}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    <span>
      test-channel-name
    </span>
  </span>
  <span
    className="badge"
    id="unreadMentions"
  >
    6
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    badge={true}
    channelId="test-channel-id"
    channelType="D"
    handleClose={[MockFunction]}
    teammateId="test-teammate-id"
  />
</Link>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on non-desktop without badge 1`] = `
<Link
  aria-label="test-channel-name 6 mentions"
  className="test-class"
  id="sidebarItem_test-channel-name"
  onClick={[Function]}
  to="test-link"
>
  <SidebarChannelButtonOrLinkIcon
    channelIsArchived={false}
    channelStatus="test"
    channelType="D"
    hasDraft={false}
    membersCount={3}
    teammateDeletedAt={1}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    <span>
      test-channel-name
    </span>
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    channelId="test-channel-id"
    channelType="D"
    handleClose={[MockFunction]}
    teammateId="test-teammate-id"
  />
</Link>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should properly handle state to show tooltip Direct Message 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  delayShow={400}
  onEntering={[Function]}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="channel-displayname__tooltip"
      placement="right"
      style={
        Object {
          "maxWidth": "228px",
          "paddingLeft": "8px",
        }
      }
    >
      test-channel-name
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div>
    <Link
      aria-label="test-channel-name 6 mentions"
      className="test-class"
      id="sidebarItem_test-channel-name"
      onClick={[Function]}
      to="test-link"
    >
      <SidebarChannelButtonOrLinkIcon
        channelIsArchived={false}
        channelStatus="test"
        channelType="D"
        hasDraft={false}
        membersCount={3}
        teammateDeletedAt={1}
        teammateId="test-teammate-id"
      />
      <span
        className="sidebar-item__name"
      >
        <span>
          test-channel-name
        </span>
      </span>
      <SidebarChannelButtonOrLinkCloseButton
        channelId="test-channel-id"
        channelType="D"
        handleClose={[MockFunction]}
        teammateId="test-teammate-id"
      />
    </Link>
  </div>
</OverlayTrigger>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should properly handle state to show tooltip Group Message 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  delayShow={400}
  onEntering={[Function]}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="channel-displayname__tooltip"
      placement="right"
      style={
        Object {
          "maxWidth": "228px",
          "paddingLeft": "8px",
        }
      }
    >
      test-channel-name
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div>
    <Link
      aria-label="test-channel-name 6 mentions"
      className="test-class"
      id="sidebarItem_test-channel-name"
      onClick={[Function]}
      to="test-link"
    >
      <SidebarChannelButtonOrLinkIcon
        channelIsArchived={false}
        channelStatus="test"
        channelType="G"
        hasDraft={false}
        membersCount={3}
        teammateDeletedAt={1}
        teammateId="test-teammate-id"
      />
      <span
        className="sidebar-item__name"
      >
        <span>
          test-channel-name
        </span>
      </span>
      <SidebarChannelButtonOrLinkCloseButton
        channelId="test-channel-id"
        channelType="G"
        handleClose={[MockFunction]}
        teammateId="test-teammate-id"
      />
    </Link>
  </div>
</OverlayTrigger>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should properly handle state to show tooltip Private Channel 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  delayShow={400}
  onEntering={[Function]}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="channel-displayname__tooltip"
      placement="right"
      style={
        Object {
          "maxWidth": "228px",
          "paddingLeft": "8px",
        }
      }
    >
      test-channel-name
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div>
    <Link
      aria-label="test-channel-name private channel 6 mentions"
      className="test-class"
      id="sidebarItem_test-channel-name"
      onClick={[Function]}
      to="test-link"
    >
      <SidebarChannelButtonOrLinkIcon
        channelIsArchived={false}
        channelStatus="test"
        channelType="P"
        hasDraft={false}
        membersCount={3}
        teammateDeletedAt={1}
        teammateId="test-teammate-id"
      />
      <span
        className="sidebar-item__name"
      >
        <span>
          test-channel-name
        </span>
      </span>
      <SidebarChannelButtonOrLinkCloseButton
        channelId="test-channel-id"
        channelType="P"
        handleClose={[MockFunction]}
        teammateId="test-teammate-id"
      />
    </Link>
  </div>
</OverlayTrigger>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should properly handle state to show tooltip Public Channel 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  delayShow={400}
  onEntering={[Function]}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="channel-displayname__tooltip"
      placement="right"
      style={
        Object {
          "maxWidth": "228px",
          "paddingLeft": "8px",
        }
      }
    >
      test-channel-name
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div>
    <Link
      aria-label="test-channel-name public channel 6 mentions"
      className="test-class"
      id="sidebarItem_test-channel-name"
      onClick={[Function]}
      to="test-link"
    >
      <SidebarChannelButtonOrLinkIcon
        channelIsArchived={false}
        channelStatus="test"
        channelType="O"
        hasDraft={false}
        membersCount={3}
        teammateDeletedAt={1}
        teammateId="test-teammate-id"
      />
      <span
        className="sidebar-item__name"
      >
        <span>
          test-channel-name
        </span>
      </span>
      <SidebarChannelButtonOrLinkCloseButton
        channelId="test-channel-id"
        channelType="O"
        handleClose={[MockFunction]}
        teammateId="test-teammate-id"
      />
    </Link>
  </div>
</OverlayTrigger>
`;
